# lifarando_backend

./: .gitignore  Dockerfile  README.md  START.bat  alembic.ini  create_admin.py  docker-compose.yml  pgpass.conf  pyproject.toml  requirements.txt  run_server.py  setup_database.sql  start_app.py  start_complete.bat  test_app.py  test_db_connection.py  test_startup.py
app/: config.py  constant.py  main.py
app/api/: router.py
app/api/apps/: __init__.py
app/api/apps/customer/: __init__.py  auth.py  cart.py  menu.py  orders.py  profile.py  restaurants.py
app/api/apps/restaurant/: __init__.py  analytics.py  auth.py  business_hours.py  menu.py  orders.py  profile.py
app/api/apps/rider/: __init__.py  auth.py  deliveries.py  earnings.py  profile.py  shifts.py
app/api/v1/: auth.py  cart.py  dashboard.py  orders.py  orders_rbac.py  rbac_admin.py  restaurants_rbac.py
app/core/: deps.py  rbac_deps.py  security.py
app/db/: __init__.py  base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: a4e1473b93c8_init_models.py  rbac_001_add_rbac_tables.py
app/models/: __init__.py  driver.py  geo.py  menu.py  order.py  payment.py  rbac.py  restaurant.py  user.py
app/schemas/: auth.py  user.py
app/services/: dispatch_service.py  payment_service.py  pricing_service.py  rbac_service.py  shift_service.py  suggestion_service.py
app/templates/dashboard/: base.html  cities.html  index.html  orders.html  restaurants.html  roles.html  shift_leads.html  user_roles.html
app/utils/: distance.py  geofence.py
tests/apps/test_customer/: test_auth.py
