[project]
name = "foodbackend"
version = "0.1.0"
dependencies = [
"fastapi>=0.111",
"uvicorn[standard]>=0.30",
"pydantic>=2.7",
"SQLAlchemy>=2.0",
"asyncpg>=0.29",
"alembic>=1.13",
"python-jose[cryptography]>=3.3",
"passlib[bcrypt]>=1.7",
"email-validator>=2.1",
"python-multipart>=0.0.9",
"httpx>=0.27",
]
[tool.ruff]
line-length = 100